NINE-457 corrected cs texts

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -187,7 +187,7 @@
       },
       "highroller": {
         "title": "Bonus pro<br/> velké hráče",
-        "text": "<span class=\"Colored\">až €500</span>"
+        "text": "<span class=\"Colored\">až KČ 12700</span>"
       }
     },
     "advantages" : {
@@ -401,7 +401,7 @@
     },
     "highroller": {
       "name": "Bonus pro velké hráče",
-      "text": "Jste velký hráč? Pak víme, co potřebujete! Získejte jako speciální bonus pro velké hráče 30 % k částce vkladu až €500 k prvnímu vkladu €300."
+      "text": "Jste velký hráč? Pak víme, co potřebujete! Získejte jako speciální bonus pro velké hráče 30 % k částce vkladu až KČ 12700 k prvnímu vkladu KČ 7600."
     }
   },
   "tournaments" : {
