NINE-457 corrected texts

--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -407,6 +407,7 @@
       "text": "Again the well-known Spinomenal will drive you nuts with the exciting May Madness tournament. During the three weeks in May, you can enjoy its cool slots and tear a piece of the lavish prize pool of 60,000 EUR!<br/><br/>Let’s start with Round III! It runs between May 25, 2021, 00:00 GMT, and June 1, 2021, 23:59 GMT."
     },
     "highroller": {
+      "upTo": "up to $800",
       "name": "Highroller bonus",
       "text": "Are you fond of making high bets? Then we know what you need. Once a month get a special 30% highroller bonus up to $800 on your deposit starting from $450."
     }
