NINE-454 weekend bonus in slider

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -183,7 +183,8 @@
         "text" : "100% bonus <br/> až <span class = \"Colored\"> Kč 3330 </span> <br/> na váš třetí vklad"
       },
       "deposit4" : {
-        "title" : "Více vzrušujících <br/> akcí <br/> již brzy!"
+        "title": "víkendové<br/> dobití",
+        "text": "<span class=\"Colored\">40% AŽ KČ 4100</span>"
       },
       "highroller": {
         "title": "Bonus pro<br/> velké hráče",
