--- a/locales/de.json
+++ b/locales/de.json
@@ -188,7 +188,8 @@
         "text": "100% bonus<br/> up to <span class=\"Colored\">150 €</span><br/> auf Ihre dritte Einzahlung"
       },
       "deposit4": {
-        "title": "Weitere aufregende <br/> Promotionen<br/> folgen in Kürze!"
+        "title": "WOCHENENDAUFSTOCKUNG",
+        "text": "<span class=\"Colored\">40% BIS ZU €150</span>"
       },
       "highroller": {
         "title": "HIGHROLLER-BONUS<br/> FÜR BESONDERE<br/> EINSATZFREUDE",
