--- a/locales/en.json
+++ b/locales/en.json
@@ -188,7 +188,8 @@
         "text": "100% bonus<br/> up to <span class=\"Colored\">$150</span><br/> on your third deposit"
       },
       "deposit4": {
-        "title": "More exciting<br/> promotions<br/> coming soon!"
+        "title": "weekend<br/> reload",
+        "text": "<span class=\"Colored\">40% up to $150</span>"
       },
       "highroller": {
         "title": "Highroller<br/> bonus",
