--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -186,7 +186,8 @@
         "text" : "100% de bonus<br/> jusqu'à <span class=\"Colored\">$225</span><br/> sur votre troisième dépôt"
       },
       "deposit4" : {
-        "title" : "D'autres promotions<br/> excitantes<br/> sont à venir!"
+        "title": "REPRISE DE FIN<br/> DE SEMAINE",
+        "text": "<span class=\"Colored\">40 % JUSQU’À $230</span>"
       },
       "highroller": {
         "title": "Bonus<br/> des grands<br/> joueurs",
