--- a/locales/de.json
+++ b/locales/de.json
@@ -391,6 +391,12 @@
       "name": "Bonus für dritte Einzahlung ",
       "text": "Machen Sie Ihre dritte Einzahlung bei Ninecasino und erhalten Sie bis zu 150 €. <br/> <br/> Um den Bonus zu aktivieren, machen Sie einfach eine dritte Einzahlung von 20 € oder mehr. Der Bonus wird automatisch gutgeschrieben."
     },
+    "deposit4": {
+      "title": "wochenendaufstockung",
+      "upTo": "40% BIS ZU €150",
+      "name": "wochenendaufstockung",
+      "text": "Mit mehr beginnen, um mehr zu gewinnen. Zahlen Sie mindestens €20 ein und erhalten Sie eine Gutschrift in Höhe von 40% bis zu €150, um diese Automaten schwindlig zu spielen, bis die Jackpots explodieren!"
+    },
     "dropsWins": {
       "title": "Drops<span class=\"Colored\">&</span>wins<br/>Phase 4<br/>(Wochen 13–16)",
       "name": "Drops&wins turnier",
