--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -390,6 +390,12 @@
       "name" : "Bonus de troisième dépôt",
       "text" : "Effectuez votre troisième dépôt sur Ninecasino et recevez jusqu’à $225.<br/><br/>Pour activer le bonus, il suffit d’effectuer un troisième dépôt de $30 ou plus. Le bonus sera versé automatiquement."
     },
+    "deposit4": {
+      "title": "reprise de fin<br/> de semaine",
+      "upTo": "40 % JUSQU’À $230",
+      "name": "reprise de fin de semaine",
+      "text": "Commencez avec plus pour gagner plus. Faites un dépôt d’au moins $20 et recevez un bonus de 40 % jusqu’à $230 qui vous permettra de faire tourner ces machines à sous jusqu’à ce que le jackpot explose!"
+    },
     "dropsWins" : {
       "title" : "Drops<span class=\"Colored\">&</span>wins<br/> à l’étape 4<br/>(semaines 13-16)",
       "name" : "Drops&wins tournoi",
