--- a/locales/en.json
+++ b/locales/en.json
@@ -392,6 +392,12 @@
       "name": "Third deposit bonus",
       "text": "Make your third deposit at Ninecasino and get up to $150.<br/><br/>To activate the bonus - just make third deposit of $20 or more. The bonus will be credited automatically."
     },
+    "deposit4": {
+      "title": "Weekend<br/> reload",
+      "upTo": "40% UP TO $150",
+      "name": "weekend reload",
+      "text": "Start with more, win more. Deposit at least $20 and get a 40% bonus up to $150 that will help to spin those slots silly, until the jackpot explodes!"
+    },
     "dropsWins": {
       "title": "Drops<span class=\"Colored\">&</span>wins<br/>Stage 4<br/>(Weeks 13-16)",
       "name": "Drops&wins tournament ",
