NINE-454 corrected texts

--- a/locales/de.json
+++ b/locales/de.json
@@ -188,7 +188,7 @@
         "text": "100% bonus<br/> up to <span class=\"Colored\">150 €</span><br/> auf Ihre dritte Einzahlung"
       },
       "deposit4": {
-        "title": "Wochenend bonus",
+        "title": "Wochenend<br/> bonus",
         "text": "<span class=\"Colored\">40% BIS ZU €150</span>"
       },
       "highroller": {
@@ -392,7 +392,7 @@
       "text": "Machen Sie Ihre dritte Einzahlung bei Ninecasino und erhalten Sie bis zu 150 €. <br/> <br/> Um den Bonus zu aktivieren, machen Sie einfach eine dritte Einzahlung von 20 € oder mehr. Der Bonus wird automatisch gutgeschrieben."
     },
     "deposit4": {
-      "title": "Wochenend bonus",
+      "title": "Wochenend<br/> bonus",
       "upTo": "40% BIS ZU €150",
       "name": "Wochenend bonus",
       "text": "Mit mehr beginnen, um mehr zu gewinnen. Zahlen Sie mindestens €20 ein und erhalten Sie eine Gutschrift in Höhe von 40% bis zu €150, um diese Automaten schwindlig zu spielen, bis die Jackpots explodieren!"
