--- a/locales/en.json
+++ b/locales/en.json
@@ -129,7 +129,8 @@
     "privacyPolicy": "Privacy policy",
     "responsibleGaming": "Responsible Gaming",
     "risk": "Risk warnings",
-    "tournaments": "Tournaments"
+    "tournaments": "Tournaments",
+    "dailyCashback": "Daily cashback"
   },
   "gameCategories": {
     "top": "Top games",
