NINE-455 corrected texts

--- a/locales/de.json
+++ b/locales/de.json
@@ -130,7 +130,7 @@
     "responsibleGaming" : "Verantwortungsbewusst Spielen",
     "risk" : "Risikowarnungen",
     "tournaments" : "Turniere",
-    "dailyCashback" : "TÄGLICHE RÜCKZAHLUNG"
+    "dailyCashback" : "Tägliche rückzahlung"
   },
   "gameCategories" : {
     "top" : "Top-Spiele ",
