--- a/locales/de.json
+++ b/locales/de.json
@@ -430,6 +430,11 @@
       "upTo": "up to €500",
       "name": "Highroller-bonus für besondere einsatzfreude",
       "text": "Sie stehen auf hohe Einsätze? Dann haben wir das Richtige für Sie. Erhalten Sie einmal im Monat einen Highroller-Bonus für besondere Einsatzfreude von 30% bis zu einem Höchstbetrag von €500 auf eine Einzahlung ab mindestens €300."
+    },
+    "knockoutFootball": {
+      "title": "Knockout<br/>Football<br/>Rush",
+      "name": "Knockout Football Rush",
+      "text": "Das erste Knockout Football Rush Network Tournament findet vom 10. Juni, 00:01 Uhr bis zum 25. Juni, 23:59 Uhr GMT+2 statt. Es gibt 5 Turniere mit insgesamt 25.000€ Preisgeld, das auf die 500 Spieler mit den höchsten Punktzahlen auf der Bestenliste verteilt wird. Mache einen Mindesteinsatz von 0,10€, spiele einen Spielautomaten von Habanero, und leg los!"
     }
   },
   "tournaments": {
@@ -501,6 +506,37 @@
       },
       {
         "text": "Jeder Gewinn bringt Ihnen Wertungspunkte entsprechend dem Gewinnmultiplikator. Je mehr Punkte Sie sammeln, desto besser Ihre Platzierung in der Rangliste."
+      }
+    ]
+  },
+  "knockoutFootball": {
+    "prize": "€ 55 000",
+    "text": "Das erste Knockout Football Rush Network Tournament findet vom 10. Juni, 00:01 Uhr bis zum 25. Juni, 23:59 Uhr GMT+2 statt. Es gibt 5 Turniere mit insgesamt 25.000€ Preisgeld, das auf die 500 Spieler mit den höchsten Punktzahlen auf der Bestenliste verteilt wird. Mache einen Mindesteinsatz von 0,10€, spiele einen Spielautomaten von Habanero, und leg los!<br/><br/>Das Turnier beginnt – mach mit beim Fußballrausch!<br/>Bist du ein Fußballfan? Tritt dem Verein bei!<br/>Erklimme die Bestenliste und werde zum Spitzenspieler!",
+    "textMobile": "Das erste Knockout Football Rush Network Tournament findet vom 10. Juni, 00:01 Uhr bis zum 25. Juni, 23:59 Uhr GMT+2 statt. Es gibt 5 Turniere mit insgesamt 25.000€ Preisgeld, das auf die 500 Spieler mit den höchsten Punktzahlen auf der Bestenliste verteilt wird. Mache einen Mindesteinsatz von 0,10€, spiele einen Spielautomaten von Habanero, und leg los!",
+    "terms": [
+      {
+        "text": "Dauer der Kampagne: 10. – 25. Juni 2021, GMT+2."
+      },
+      {
+        "text": "Aufbau der Kampagne: 5 Turniere, je 3 Tage lang."
+      },
+      {
+        "text": "Preisgeld: 25.000€/5.000€ pro Turnier."
+      },
+      {
+        "text": "Gewinnstrukturierung: 500 Sieger, 100 pro Turnier."
+      },
+      {
+        "text": "Mindesteinsatz: 0,10€."
+      },
+      {
+        "text": "Teilnahmeberechtigte Inhalte: alle Habanero-Automatenspiele."
+      },
+      {
+        "text": "Qualifizierungskriterien: Gewinner werden anhand des höchsten aufgezeichneten Umsatzes ermittelt."
+      },
+      {
+        "text": "Habanero hat das Recht, die Aktion jederzeit zu ändern, auszusetzen oder abzubrechen."
       }
     ]
   },
